// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates/Seasons should render a spinner when loading expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Seasons
    loading={true}
    show={
      Object {
        "first_air_date": "01.01.2010",
        "id": 1,
        "name": "name",
        "poster_path": "path/to/image",
        "seasons": Array [
          Object {
            "season_number": 1,
          },
          Object {
            "season_number": 2,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Templates/Seasons should render as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Seasons
    loading={false}
    show={
      Object {
        "first_air_date": "01.01.2010",
        "id": 1,
        "name": "name",
        "poster_path": "path/to/image",
        "seasons": Array [
          Object {
            "season_number": 1,
          },
          Object {
            "season_number": 2,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MiniHeader
          link="/tv/1"
          linkCopy="Back to main"
          poster_path="path/to/image"
          release_date="01.01.2010"
          title="name"
        />,
        <ul
          className="seasons"
        >
          <li
            className="seasons__element"
          >
            <Season
              season={
                Object {
                  "season_number": 1,
                }
              }
              tvId={1}
            />
          </li>
          <li
            className="seasons__element"
          >
            <Season
              season={
                Object {
                  "season_number": 2,
                }
              }
              tvId={1}
            />
          </li>
        </ul>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "link": "/tv/1",
          "linkCopy": "Back to main",
          "poster_path": "path/to/image",
          "release_date": "01.01.2010",
          "title": "name",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="seasons__element"
            >
              <Season
                season={
                  Object {
                    "season_number": 1,
                  }
                }
                tvId={1}
              />
            </li>,
            <li
              className="seasons__element"
            >
              <Season
                season={
                  Object {
                    "season_number": 2,
                  }
                }
                tvId={1}
              />
            </li>,
          ],
          "className": "seasons",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": <Season
                season={
                  Object {
                    "season_number": 1,
                  }
                }
                tvId={1}
              />,
              "className": "seasons__element",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "season": Object {
                  "season_number": 1,
                },
                "tvId": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": <Season
                season={
                  Object {
                    "season_number": 2,
                  }
                }
                tvId={1}
              />,
              "className": "seasons__element",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "season": Object {
                  "season_number": 2,
                },
                "tvId": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MiniHeader
            link="/tv/1"
            linkCopy="Back to main"
            poster_path="path/to/image"
            release_date="01.01.2010"
            title="name"
          />,
          <ul
            className="seasons"
          >
            <li
              className="seasons__element"
            >
              <Season
                season={
                  Object {
                    "season_number": 1,
                  }
                }
                tvId={1}
              />
            </li>
            <li
              className="seasons__element"
            >
              <Season
                season={
                  Object {
                    "season_number": 2,
                  }
                }
                tvId={1}
              />
            </li>
          </ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "link": "/tv/1",
            "linkCopy": "Back to main",
            "poster_path": "path/to/image",
            "release_date": "01.01.2010",
            "title": "name",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="seasons__element"
              >
                <Season
                  season={
                    Object {
                      "season_number": 1,
                    }
                  }
                  tvId={1}
                />
              </li>,
              <li
                className="seasons__element"
              >
                <Season
                  season={
                    Object {
                      "season_number": 2,
                    }
                  }
                  tvId={1}
                />
              </li>,
            ],
            "className": "seasons",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Season
                  season={
                    Object {
                      "season_number": 1,
                    }
                  }
                  tvId={1}
                />,
                "className": "seasons__element",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "season": Object {
                    "season_number": 1,
                  },
                  "tvId": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": <Season
                  season={
                    Object {
                      "season_number": 2,
                    }
                  }
                  tvId={1}
                />,
                "className": "seasons__element",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "season": Object {
                    "season_number": 2,
                  },
                  "tvId": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
